--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>11WebAR Ring Demo</title>
+    <title>۲۲WebAR Ring Demo</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-assets>
             <a-asset-item id="ring-model" src="jewelery_ring_diamonds_compressed.glb"></a-asset-item>
         </a-assets>
@@ -22,9 +22,10 @@
         </a-entity>
 
         <!-- مکعب تست -->
-        <a-box position="0 0 -1" scale="0.5 0.5 0.5" color="red"></a-box>
+        <a-box position="0 0.5 -1" scale="0.5 0.5 0.5" color="red"></a-box>
 
-        <a-camera></a-camera>
+        <!-- دوربین -->
+        <a-camera position="0 0 0"></a-camera>
     </a-scene>
 </body>
 </html>
