--- a/index.html
+++ b/index.html
@@ -3,30 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش انگشتر با AR</title>
+    <title>نمایش انگشتر ساده با AR</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- مارکر برای AR -->
-        <a-marker preset="hiro">
-            <!-- یه حلقه ساده به جای مدل GLB -->
-            <a-torus 
-                radius="0.05" 
-                radius-tubular="0.005" 
-                color="#FFD700" 
-                position="0 0 0" 
-                scale="0.5 0.5 0.5">
-            </a-torus>
-        </a-marker>
-
-        <!-- برای تست بدون مارکر یا تو PC -->
+        <!-- مدل حلقه مستقیم تو صحنه -->
         <a-entity 
             torus="radius: 0.05; radiusTubular: 0.005" 
             color="#FFD700" 
-            position="0 1 -2" 
-            scale="0.5 0.5 0.5">
+            position="0 0 -1" 
+            scale="0.5 0.5 0.5"
+            animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-entity>
 
         <!-- دوربین -->
