--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش انگشتر ساده با AR</title>
+    <title>نمایش مدل انگشتر</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- مدل حلقه مستقیم تو صحنه -->
+    <a-scene embedded>
+        <!-- مدل حلقه -->
         <a-entity 
             torus="radius: 0.05; radiusTubular: 0.005" 
             color="#FFD700" 
@@ -19,7 +18,7 @@
         </a-entity>
 
         <!-- دوربین -->
-        <a-entity camera></a-entity>
+        <a-entity camera look-controls></a-entity>
     </a-scene>
 </body>
 </html>
