--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش انگشتر</title>
+    <title>۱۱۱۱نمایش انگشتر</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
             radius="0.05" 
             radius-tubular="0.005" 
             color="#FFD700" 
-            position="0 0.5 -0.5" 
+            position="0 0.2 -0.2" 
             scale="0.5 0.5 0.5"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-torus>
