--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش انگشتر در AR</title>
+    <title>نمایش مدل انگشتر شخصی در AR</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- مدل انگشتر (حلقه) -->
-        <a-torus 
-            radius="0.05" 
-            radius-tubular="0.005" 
-            color="#FFD700" 
+        <!-- مدل شخصی تو -->
+        <a-entity 
+            gltf-model="url(./ring.glb)" 
             position="0 0 -0.1" 
             scale="0.5 0.5 0.5"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
-        </a-torus>
+        </a-entity>
 
         <!-- دوربین -->
         <a-entity camera></a-entity>
