--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش مدل انگشتر شخصی در AR</title>
+    <title>نمایش مدل انگشتر شخصی</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene>
+        <!-- پس‌زمینه آسمان -->
+        <a-sky color="#87CEEB"></a-sky>
+
+        <!-- کف زمین ساده -->
+        <a-plane 
+            position="0 0 -2" 
+            rotation="-90 0 0" 
+            width="4" 
+            height="4" 
+            color="#7BC8A4">
+        </a-plane>
+
         <!-- مدل شخصی تو -->
         <a-entity 
             gltf-model="url(./ring.glb)" 
-            position="0 0 -0.1" 
+            position="0 0.2 -0.2" 
             scale="0.5 0.5 0.5"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-entity>
 
-        <!-- دوربین -->
-        <a-entity camera></a-entity>
+        <!-- دوربین مجازی -->
+        <a-entity camera look-controls position="0 1.6 0"></a-entity>
     </a-scene>
 </body>
 </html>
