--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>۳۳۳۳نمایش مدل انگشتر شخصی</title>
+    <title>نمایش مدل انگشتر ۱۱۱۱۱</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
 
         <!-- مدل شخصی تو -->
         <a-entity 
-            gltf-model="url(./ring.glb)" 
+            gltf-model="url(./jewelery_ring_diamonds.glb)" 
             position="0 0.2 -0.2" 
             scale="0.5 0.5 0.5"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
