--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش مدل انگشتر ۱۱۱۱۱</title>
+    <title>نمایش مدل انگشتر ۳۳۳۳۳</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 </head>
 <body>
@@ -20,11 +20,11 @@
             color="#7BC8A4">
         </a-plane>
 
-        <!-- مدل شخصی تو -->
+        <!-- مدل شخصی تو با اندازه کوچیک‌تر -->
         <a-entity 
             gltf-model="url(./jewelery_ring_diamonds.glb)" 
             position="0 0.2 -0.2" 
-            scale="0.5 0.5 0.5"
+            scale="0.05 0.05 0.05"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-entity>
 
