--- a/index.html
+++ b/index.html
@@ -3,33 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش مدل انگشتر ثثثثث</title>
+    <title>نمایش مدل انگشتر در AR</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-    <a-scene>
-        <!-- پس‌زمینه آسمان -->
-        <a-sky color="#87CEEB"></a-sky>
-
-        <!-- کف زمین ساده -->
-        <a-plane 
-            position="0 0 -2" 
-            rotation="-90 0 0" 
-            width="4" 
-            height="4" 
-            color="#7BC8A4">
-        </a-plane>
-
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- مدل شخصی تو با اندازه خیلی کوچیک‌تر -->
         <a-entity 
             gltf-model="url(./jewelery_ring_diamonds.glb)" 
-            position="0 0.1 -0.5" 
-            scale="0.005 0.005 0.005"
+            position="0 0 -0.3" 
+            scale="0.001 0.001 0.001"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-entity>
 
-        <!-- دوربین مجازی -->
-        <a-entity camera look-controls position="0 1.6 0"></a-entity>
+        <!-- دوربین -->
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
