--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش مدل انگشتر در AR</title>
+    <title>نمایش انگشتر شششششششدر AR</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- مدل شخصی تو با اندازه خیلی کوچیک‌تر -->
+        <!-- مدل انگشتر تو -->
         <a-entity 
             gltf-model="url(./jewelery_ring_diamonds.glb)" 
             position="0 0 -0.3" 
