--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نمایش انگشتر شششششششدر AR</title>
+    <title>انگشتر روی انگشت با MediaPipe</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/hands.js"></script>
 </head>
 <body>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- مدل انگشتر تو -->
+        <!-- مدل انگشتر -->
         <a-entity 
+            id="ring" 
             gltf-model="url(./jewelery_ring_diamonds.glb)" 
-            position="0 0 -0.3" 
             scale="0.001 0.001 0.001"
             animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
         </a-entity>
@@ -20,5 +21,40 @@
         <!-- دوربین -->
         <a-entity camera></a-entity>
     </a-scene>
+
+    <script>
+        const hands = new Hands({
+            locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/${file}`
+        });
+        hands.setOptions({
+            maxNumHands: 1,
+            modelComplexity: 1,
+            minDetectionConfidence: 0.5,
+            minTrackingConfidence: 0.5
+        });
+
+        hands.onResults((results) => {
+            if (results.multiHandLandmarks && results.multiHandLandmarks.length > 0) {
+                const landmarks = results.multiHandLandmarks[0];
+                // نقطه 13 (پایه انگشت حلقه)
+                const ringFingerBase = landmarks[13];
+                const x = (ringFingerBase.x - 0.5) * 2; // تنظیم مختصات به فضای A-Frame
+                const y = -(ringFingerBase.y - 0.5) * 2;
+                const z = -ringFingerBase.z - 0.3; // فاصله از دوربین
+
+                // آپدیت موقعیت انگشتر
+                const ring = document.querySelector('#ring');
+                ring.setAttribute('position', `${x} ${y} ${z}`);
+            }
+        });
+
+        // فعال کردن وب‌کم
+        const videoElement = document.createElement('video');
+        navigator.mediaDevices.getUserMedia({ video: true }).then((stream) => {
+            videoElement.srcObject = stream;
+            videoElement.play();
+            setInterval(() => hands.send({ image: videoElement }), 100);
+        });
+    </script>
 </body>
 </html>
