--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تست تشخیص دست</title>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/hands.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        #video, #canvas {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
-    <video id="video" style="position: absolute; top: 0; left: 0;"></video>
-    <canvas id="canvas" style="position: absolute; top: 0; left: 0;"></canvas>
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas"></canvas>
 
     <script>
         const video = document.getElementById('video');
@@ -17,7 +30,7 @@
 
         // تنظیمات MediaPipe Hands
         const hands = new Hands({
-            locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/${file}`
+            locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`
         });
         hands.setOptions({
             maxNumHands: 1,
@@ -27,9 +40,13 @@
         });
 
         hands.onResults((results) => {
+            // تنظیم اندازه‌های canvas
             canvas.width = video.videoWidth;
             canvas.height = video.videoHeight;
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // دیباگ: چک کن که نتایج میاد یا نه
+            console.log("Results:", results);
 
             if (results.multiHandLandmarks) {
                 for (const landmarks of results.multiHandLandmarks) {
@@ -42,16 +59,35 @@
                         ctx.fill();
                     }
                 }
+            } else {
+                console.log("No hands detected");
             }
         });
 
         // فعال کردن وب‌کم
-        navigator.mediaDevices.getUserMedia({ video: true }).then((stream) => {
+        navigator.mediaDevices.getUserMedia({ 
+            video: { facingMode: "user" } // دوربین جلو
+        }).then((stream) => {
             video.srcObject = stream;
-            video.play();
             video.onloadedmetadata = () => {
-                setInterval(() => hands.send({ image: video }), 100);
+                video.play();
+                // تنظیم اندازه اولیه
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                // ارسال فریم‌ها به MediaPipe
+                async function processFrame() {
+                    await hands.send({ image: video });
+                    requestAnimationFrame(processFrame); // به‌جای setInterval
+                }
+                processFrame();
             };
+        }).catch((err) => {
+            console.error("Error accessing camera:", err);
+        });
+
+        // دیباگ اندازه‌ها
+        video.addEventListener('play', () => {
+            console.log("Video size:", video.videoWidth, video.videoHeight);
         });
     </script>
 </body>
