--- a/index.html
+++ b/index.html
@@ -1,118 +1,85 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تست تشخیص دست با انگشتر 3D</title>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.134/examples/js/loaders/GLTFLoader.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        #video {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-        #renderer {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Hand Tracking with MediaPipe</title>
+  <style>
+    canvas { border: 1px solid black; }
+  </style>
 </head>
 <body>
-    <video id="video" autoplay playsinline></video>
-    <div id="renderer"></div>
+  <video id="video" autoplay playsinline style="display: none;"></video>
+  <canvas id="canvas" width="640" height="480"></canvas>
 
-    <script>
-        const video = document.getElementById('video');
-        const rendererContainer = document.getElementById('renderer');
+  <!-- بارگذاری اسکریپت MediaPipe Hands -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+  <script>
+    // دسترسی به ویدیو و کانواس
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
 
-        // تنظیم Three.js
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ alpha: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        rendererContainer.appendChild(renderer.domElement);
+    // تنظیمات Hands
+    const hands = new Hands({
+      locateFile: (file) => {
+        // مسیر فایل‌های WASM رو درست تنظیم کنید
+        return `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`;
+      }
+    });
 
-        // نور محیط
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1);
-        scene.add(ambientLight);
+    // تنظیم پارامترها
+    hands.setOptions({
+      maxNumHands: 2,
+      modelComplexity: 1,
+      minDetectionConfidence: 0.5,
+      minTrackingConfidence: 0.5
+    });
 
-        // لودر GLTF
-        const loader = new THREE.GLTFLoader();
-        let ringModel;
-        loader.load('ring.glb', (gltf) => {
-            ringModel = gltf.scene;
-            ringModel.scale.set(0.05, 0.05, 0.05); // تنظیم اندازه مدل (بسته به مدلت تغییر بده)
-            scene.add(ringModel);
-            console.log("Ring model loaded");
-        }, undefined, (error) => {
-            console.error("Error loading ring.glb:", error);
-        });
+    // مدیریت نتایج
+    hands.onResults((results) => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-        // تنظیمات MediaPipe Hands
-        const hands = new Hands({
-            locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`
-        });
-        hands.setOptions({
-            maxNumHands: 1,
-            modelComplexity: 1,
-            minDetectionConfidence: 0.7,
-            minTrackingConfidence: 0.7
-        });
-
-        hands.onResults((results) => {
-            if (results.multiHandLandmarks && ringModel) {
-                const landmarks = results.multiHandLandmarks[0];
-                const ringFinger = landmarks[13]; // RING_FINGER_MCP
-
-                if (ringFinger) {
-                    // تبدیل مختصات 2D به 3D
-                    const x = (ringFinger.x - 0.5) * 2; // نرمالایز به [-1, 1]
-                    const y = -(ringFinger.y - 0.5) * 2; // معکوس Y چون Three.js برعکسه
-                    const z = ringFinger.z * 10; // عمق (بسته به نیاز تنظیم کن)
-
-                    ringModel.position.set(x, y, z);
-                }
-            }
-        });
-
-        // فعال کردن وب‌کم
-        navigator.mediaDevices.getUserMedia({ 
-            video: { facingMode: "user" }
-        }).then((stream) => {
-            video.srcObject = stream;
-            video.onloadedmetadata = () => {
-                video.play();
-                camera.position.z = 1; // تنظیم موقعیت دوربین
-                animate();
-            };
-        }).catch((err) => {
-            console.error("Error accessing camera:", err);
-        });
-
-        // حلقه انیمیشن
-        function animate() {
-            hands.send({ image: video });
-            renderer.render(scene, camera);
-            requestAnimationFrame(animate);
+      if (results.multiHandLandmarks) {
+        for (const landmarks of results.multiHandLandmarks) {
+          for (const point of landmarks) {
+            const x = point.x * canvas.width;
+            const y = point.y * canvas.height;
+            ctx.beginPath();
+            ctx.arc(x, y, 5, 0, 2 * Math.PI);
+            ctx.fillStyle = 'red';
+            ctx.fill();
+          }
         }
+      }
+    });
 
-        // تنظیم مجدد اندازه با تغییر پنجره
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
-    </script>
+    // دسترسی به دوربین
+    async function startCamera() {
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+      video.srcObject = stream;
+      video.onloadedmetadata = () => {
+        video.play();
+        animate();
+      };
+    }
+
+    // حلقه انیمیشن
+    async function animate() {
+      await hands.send({ image: video });
+      requestAnimationFrame(animate);
+    }
+
+    // شروع برنامه
+    (async () => {
+      try {
+        await hands.initialize();
+        console.log("Hands initialized successfully!");
+        await startCamera();
+      } catch (e) {
+        console.error("Error initializing hands:", e);
+      }
+    })();
+  </script>
 </body>
 </html>
