--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>Hand Tracking with MediaPipe</title>
   <style>
     canvas { border: 1px solid black; }
+    video { display: none; }
   </style>
 </head>
 <body>
-  <video id="video" autoplay playsinline style="display: none;"></video>
+  <video id="video" autoplay playsinline></video>
   <canvas id="canvas" width="640" height="480"></canvas>
 
   <!-- بارگذاری اسکریپت MediaPipe Hands -->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+  <script src="./hands.js"></script>
   <script>
-    // دسترسی به ویدیو و کانواس
+    // دسترسی به المان‌ها
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -22,12 +23,12 @@
     // تنظیمات Hands
     const hands = new Hands({
       locateFile: (file) => {
-        // مسیر فایل‌های WASM رو درست تنظیم کنید
-        return `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`;
+        console.log(`Loading file: ${file}`); // برای دیباگ
+        return `./${file}`; // مسیر فایل‌های WASM و داده‌ها
       }
     });
 
-    // تنظیم پارامترها
+    // تنظیم گزینه‌ها
     hands.setOptions({
       maxNumHands: 2,
       modelComplexity: 1,
@@ -37,9 +38,11 @@
 
     // مدیریت نتایج
     hands.onResults((results) => {
+      // پاک کردن کانواس
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
+      // رسم نقاط دست
       if (results.multiHandLandmarks) {
         for (const landmarks of results.multiHandLandmarks) {
           for (const point of landmarks) {
@@ -54,30 +57,47 @@
       }
     });
 
-    // دسترسی به دوربین
+    // تابع شروع دوربین
     async function startCamera() {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-      video.srcObject = stream;
-      video.onloadedmetadata = () => {
-        video.play();
-        animate();
-      };
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        video.srcObject = stream;
+        return new Promise((resolve) => {
+          video.onloadedmetadata = () => {
+            video.play();
+            resolve();
+          };
+        });
+      } catch (e) {
+        console.error("Error accessing camera:", e);
+      }
     }
 
-    // حلقه انیمیشن
+    // تابع انیمیشن
     async function animate() {
-      await hands.send({ image: video });
+      try {
+        await hands.send({ image: video });
+      } catch (e) {
+        console.error("Error in hands.send:", e);
+      }
       requestAnimationFrame(animate);
     }
 
     // شروع برنامه
     (async () => {
       try {
+        // مقداردهی اولیه Hands
+        console.log("Initializing Hands...");
         await hands.initialize();
         console.log("Hands initialized successfully!");
+
+        // شروع دوربین
         await startCamera();
+
+        // شروع انیمیشن
+        animate();
       } catch (e) {
-        console.error("Error initializing hands:", e);
+        console.error("Error during initialization:", e);
       }
     })();
   </script>
