--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hand Tracking with MediaPipe</title>
+  <title>۱۱۱۱۱۱ Tracking with MediaPipe</title>
   <style>
     canvas { border: 1px solid black; }
     video { display: none; }
